[package]
name = "arti"
version = "1.9.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2024"
rust-version = "1.86"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "A rust implementation of the Tor privacy tools."
keywords = ["tor", "arti", "privacy", "anonymity"]
categories = ["command-line-utilities", "cryptography"]
repository = "https://gitlab.torproject.org/tpo/core/arti.git/"
[package.metadata.docs.rs]
all-features = true
#
# We need a runtime
# @@ test-all-crates conditional-option minimal --features=default-runtime

[features]
default = [
    "default-runtime",
    "dns-proxy",
    "harden",
    "compression",
    "bridge-client",
    "pt-client",
    "onion-service-client",
    "vanguards",
]

full = [
    "default-runtime",
    "onion-service-client",
    "onion-service-service",
    "vanguards",
    "async-std",
    "tokio",
    "native-tls",
    "journald",
    "arti-client/full",
    "dns-proxy",
    "harden",
    "compression",
    "bridge-client",
    "pt-client",
    "restricted-discovery",
    "arti-rpcserver?/full",
    "fs-mistrust/full",
    "rpc",
    "safelog/full",
    "tor-config/full",
    "tor-error/full",
    "tor-rtcompat/full",
    "tor-socksproto/full",
    "tor-rpcbase?/full",
    "tor-hsrproxy?/full",
    "tor-hsservice?/full",
    "tor-async-utils/full",
    "tor-config-path/full",
    "tor-basic-utils/full",
    "tor-rpc-connect?/full",
    "tor-key-forge/full",
    "tor-keymgr/full",
    "tor-hscrypto?/full",
    "tor-cell?/full",
    "tor-hsclient?/full",
    "tor-proto?/full",
    "futures-copy/full",
    "tor-general-addr/full",
]

async-std = ["arti-client/async-std", "tor-rtcompat/async-std", "async-ctrlc", "async-signal"]
bridge-client = ["arti-client/bridge-client"]
default-runtime = ["tokio", "native-tls"]
dns-proxy = ["hickory-proto"]
experimental-api = ["arti-client/experimental-api", "visibility", "__is_experimental"]
harden = ["secmem-proc"]
keymgr = ["arti-client/keymgr", "__is_experimental"]
tokio = ["tokio-crate", "arti-client/tokio", "tor-rtcompat/tokio", "tokio-util"]
native-tls = ["arti-client/native-tls", "tor-rtcompat/native-tls"]
onion-service-client = ["arti-client/onion-service-client"]

onion-service-cli-extra = ["arti-client/onion-service-cli-extra", "tor-hsclient", "tor-hscrypto", "__is_experimental"]
onion-service-service = ["arti-client/onion-service-service", "tor-hsrproxy", "tor-hsservice"]
restricted-discovery = ["tor-hsservice/restricted-discovery"]
vanguards = ["arti-client/vanguards"]
hs-pow-full = ["arti-client/hs-pow-full", "__is_experimental"]
pt-client = ["bridge-client", "arti-client/pt-client"]
ctor-keystore = ["arti-client/ctor-keystore", "__is_experimental"]
flowctl-cc = ["arti-client/flowctl-cc", "__is_experimental"]
counter-galois-onion = ["arti-client/counter-galois-onion", "flowctl-cc", "__is_experimental"]

rpc = ["arti-rpcserver", "tor-rpcbase", "tor-rpc-connect", "derive-deftly"]

# This is not nonadditive from a software POV, but we mark it as such because it
# includes code licensed under the old OpenSSL license (which was 4-clause BSD),
# which in turn introduces a GPL-incompatibility.
rustls = ["arti-client/rustls", "tor-rtcompat/rustls", "rustls-crate", "__is_nonadditive"]

# depends directly on arti-client/static so native-tls doesn't get automatically included
static = ["arti-client/static", "__is_nonadditive"]
static-sqlite = ["arti-client/static-sqlite", "__is_nonadditive"]
static-native-tls = ["arti-client/static-native-tls", "native-tls", "__is_nonadditive"]
journald = ["tracing-journald"]

opentelemetry = [
    "tracing-opentelemetry",
    "dep:opentelemetry",
    "opentelemetry_sdk",
    "opentelemetry-otlp",
    "opentelemetry-appender-tracing",
    "opentelemetry-proto",
    "__is_experimental",
]

accel-sha1-asm = ["arti-client/accel-sha1-asm", "__is_nonadditive"]
accel-openssl = ["arti-client/accel-openssl", "__is_nonadditive"]

__is_nonadditive = []

compression = ["arti-client/compression"]

# This feature flag enables experimental features that are not supported. Turning it on may
# void your API.
experimental = [
    "arti-client/experimental",
    "experimental-api",
    "hs-pow-full",
    "http-connect",
    "keymgr",
    "metrics",
    "hsc",
    "tor-hsservice/experimental",
    "ctor-keystore",
    "onion-service-cli-extra",
    "flowctl-cc",
    "counter-galois-onion",
    "opentelemetry",
    "tokio-console",
]
metrics = ["dep:metrics-exporter-prometheus", "tor-hsservice?/metrics", "tor-hsrproxy?/metrics", "__is_experimental"]
http-connect = ["__is_experimental", "base64ct", "http", "hyper", "tor-error/http", "tor-cell", "tor-proto"]
hsc = ["onion-service-client", "experimental-api", "keymgr", "__is_experimental"]
tokio-console = ["dep:console-subscriber", "__is_experimental"]
__is_experimental = []

[dependencies]
anyhow = "1.0.23"
arti-client = { package = "arti-client", path = "../arti-client", version = "0.38.0", default-features = false, features = [
    "anyhow",
] }
arti-rpcserver = { path = "../arti-rpcserver", version = "0.38.0", optional = true }
async-ctrlc = { version = "1.2.0", optional = true }
async-signal = { version = "0.2.10", optional = true }
base64ct = { version = "1.5.1", optional = true }
cfg-if = "1.0.0"
clap = { version = "4.3.24", features = ["string", "wrap_help", "derive"] }
console-subscriber = { version = "0.5.0", optional = true }
derive-deftly = { version = "~1.6.0", features = ["full", "beta"], optional = true }
derive_builder = { version = "0.11", package = "derive_builder_fork_arti" }
fs-mistrust = { path = "../fs-mistrust", version = "0.13.1" }
futures = "0.3.14"
futures-copy = { version = "0.2.2", path = "../futures-copy" }
hickory-proto = { version = "0.25.2", optional = true }
http = { version = "1.3.1", optional = true }
humantime = "2"
humantime-serde = "1.1.1"
hyper = { version = "1.7", features = ["http1", "server"], optional = true }
itertools = "0.14.0"
libc = "0.2"
metrics-exporter-prometheus = { version = "0.18.0", optional = true, default-features = false, features = [
    "http-listener",
] }
notify = { version = "8", default-features = false, features = ["macos_kqueue"] }
opentelemetry = { version = "0.31.0", optional = true }
opentelemetry-appender-tracing = { version = "0.31.1", optional = true }
opentelemetry-otlp = { version = "0.31.0", optional = true }
opentelemetry-proto = { version = "0.31.0", optional = true }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"], optional = true } # TODO: what's up with this feature
paste = "1"
pin-project = "1"
postage = { version = "0.5.0", default-features = false, features = ["futures-traits"] }
rlimit = "0.10.1"
rustls-crate = { package = "rustls", version = "0.23.5", optional = true, default-features = false, features = [
    "logging",
    "ring",
] }
safelog = { path = "../safelog", version = "0.7.0" }
secmem-proc = { version = "0.3.4", optional = true }
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.50"
thiserror = "2"
time = "0.3.18"
tokio-crate = { package = "tokio", version = "1.7", optional = true, features = ["signal"] }
tokio-util = { version = "0.7.0", features = ["compat"], optional = true }
toml = "0.9.5"
tor-async-utils = { path = "../tor-async-utils", version = "0.38.0" }
tor-basic-utils = { path = "../tor-basic-utils", version = "0.38.0" }
tor-cell = { path = "../tor-cell", version = "0.38.0", optional = true }
tor-config = { path = "../tor-config", version = "0.38.0" }
tor-config-path = { path = "../tor-config-path", version = "0.38.0" }
tor-error = { path = "../tor-error", version = "0.38.0", default-features = false, features = ["tracing"] }
tor-general-addr = { path = "../tor-general-addr", version = "0.38.0" }
tor-hsclient = { path = "../tor-hsclient", version = "0.38.0", optional = true }
tor-hscrypto = { path = "../tor-hscrypto", version = "0.38.0", optional = true }
tor-hsrproxy = { path = "../tor-hsrproxy", version = "0.38.0", optional = true }
tor-hsservice = { path = "../tor-hsservice", version = "0.38.0", optional = true }
tor-key-forge = { path = "../tor-key-forge", version = "0.38.0" }
tor-keymgr = { path = "../tor-keymgr", version = "0.38.0" }
tor-log-ratelim = { path = "../tor-log-ratelim", version = "0.38.0" }
tor-proto = { path = "../tor-proto", version = "0.38.0", optional = true }
tor-rpc-connect = { path = "../tor-rpc-connect", version = "0.38.0", optional = true, features = ["rpc-server"] }
tor-rpcbase = { path = "../tor-rpcbase", version = "0.38.0", optional = true }
tor-rtcompat = { path = "../tor-rtcompat", version = "0.38.0", default-features = false }
tor-socksproto = { path = "../tor-socksproto", version = "0.38.0" }
tracing = "0.1.36"
tracing-appender = "0.2.0"
tracing-journald = { version = "0.3.0", optional = true }

tracing-opentelemetry = { version = "0.32.0", optional = true }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
visibility = { version = "0.1.0", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["winerror"] }

[dev-dependencies]
amplify = { version = "4", default-features = false, features = ["derive"] }
arti-client = { package = "arti-client", path = "../arti-client", version = "0.38.0", default-features = false, features = [
    "testing",
] }
assert_cmd = "2.1.1"
derive_more = { version = "2.0.1", features = ["full"] }
itertools = "0.14.0"
postage = { version = "0.5.0", default-features = false, features = ["futures-traits"] }
regex = { version = "1", default-features = false, features = ["std"] }
serde_json = "1.0.50"
tempfile = "3"
test-temp-dir = { version = "0.6.0", path = "../test-temp-dir" }
tor-async-utils = { version = "0.38.0", path = "../tor-async-utils" }
tor-config = { path = "../tor-config", version = "0.38.0", features = ["testing"] }
tor-memquota = { version = "0.38.0", path = "../tor-memquota", default-features = false, features = ["testing"] }
tor-rtmock = { path = "../tor-rtmock", version = "0.38.0" }
trycmd = "0.15.4"
walkdir = "2"
