[package]
name = "fslock-guard"
version = "0.0.1"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Wrapper around a lockfile with unlock-on-drop semantics"
keywords = ["fs", "file", "lock"]
categories = ["filesystem"]
repository = "https://gitlab.torproject.org/tpo/core/arti.git/"
rust-version = "1.70"

[features]
default = []
full = []

[dependencies]
fslock = "0.2.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
