[package]
name = "fslock-guard"
version = "0.1.1"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Wrapper around a lockfile with unlock-on-drop semantics"
keywords = ["fs", "file", "lock"]
categories = ["filesystem"]
repository = "https://gitlab.torproject.org/tpo/core/arti.git/"
rust-version = "1.70"

[features]
default = []
full = []

[dependencies]
fslock = { version = "0.2.0", package = "fslock-arti-fork" }
thiserror = "1"

[dev-dependencies]
test-temp-dir = { version = "0.2.0", path = "../test-temp-dir" }

[target.'cfg(windows)'.dependencies.winapi]
version = "^0.3.8"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
