[package]
name = "retry-error"
version = "0.6.2"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2021"
rust-version = "1.77"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "An error type for an operation that can fail more than once"
keywords = ["tor", "arti", "async", "retry"]
categories = ["rust-patterns"]
repository = "https://gitlab.torproject.org/tpo/core/arti.git/"

[dev-dependencies]

anyhow = "1.0.23"
derive_more = { version = "1.0.0", features = ["full"] }
thiserror = "2"

[dependencies]

[features]
full = []
[package.metadata.docs.rs]
all-features = true
