[package]
name = "retry-error"
version = "0.10.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2024"
rust-version = "1.86"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "An error type for an operation that can fail more than once"
keywords = ["tor", "arti", "async", "retry"]
categories = ["rust-patterns"]
repository = "https://gitlab.torproject.org/tpo/core/arti.git/"

[dev-dependencies]

anyhow = "1.0.23"
derive_more = { version = "2.0.1", features = ["full"] }
thiserror = "2"

[dependencies]
humantime = "2"

[features]
full = []
[package.metadata.docs.rs]
all-features = true
