[package]
name = "safelog"
version = "0.3.6"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Conditionally suppress confidential information from logs"
keywords = ["tor", "arti", "logging", "privacy"]
# We must put *something* here and this will do
categories = ["rust-patterns"]
repository = "https://gitlab.torproject.org/tpo/core/arti.git/"

[features]
default = []
full = []

[dependencies]
derive_more = "0.99.3"
educe = "0.4.6"
either = "1"
fluid-let = "1"
serde = { version = "1.0.103", optional = true, features = ["derive"] }
thiserror = "1"

[dev-dependencies]
serial_test = "3.0.0"
static_assertions = "1"
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
