[package]
name = "test-temp-dir"
version = "0.1.0"
authors = ["The Tor Project, Inc.", "Ian Jackson <iwj@torproject.org>"]
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Temporary directories for use in tests"
keywords = ["testing", "fs", "filesystem", "temporary", "temp"]
categories = ["development-tools::testing"]
repository = "https://gitlab.torproject.org/tpo/core/arti.git/"

[features]
default = []
full = []

[dependencies]
anyhow = "1.0.23"
derive_more = "0.99.17"
educe = "0.4.6"
tempfile = "3"
