[package]
name = "tor-async-utils"
version = "0.39.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2024"
rust-version = "1.86"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Async/futures helpers for use with Tor"
keywords = ["tor", "arti"]
# We must put *something* here and this will do
categories = ["rust-patterns"]
repository = "https://gitlab.torproject.org/tpo/core/arti.git/"

[dependencies]
derive-deftly = { version = "~1.6.0", features = ["full", "beta"] }
educe = "0.4.22"
futures = "0.3.14"
oneshot-fused-workaround = { path = "../oneshot-fused-workaround", version = "0.5.0" }
pin-project = "1"
postage = { version = "0.5.0", default-features = false, features = ["futures-traits"] }
thiserror = "2"
void = "1"

[dev-dependencies]
futures-await-test = "0.3.0"
tokio = { version = "1.7", features = ["macros", "net", "rt", "rt-multi-thread", "time"] }
tor-error = { path = "../tor-error", version = "0.39.0" }
tor-rtcompat = { version = "0.39.0", path = "../tor-rtcompat" }
tor-rtmock = { path = "../tor-rtmock", version = "0.39.0" }

[features]
full = ["oneshot-fused-workaround/full"]
