[package]
name = "tor-bytes"
version = "0.3.1"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Helpers for encoding and decoding byte-orientted data, as used by Tor"
keywords = ["tor", "arti", "encoding"]
categories = ["parsing", "encoding"]
repository = "https://gitlab.torproject.org/tpo/core/arti.git/"

[dependencies]
arrayref = "0.3"
bytes = "1"
digest = { version = "0.10.0", features = ["subtle", "mac"] }
generic-array = "0.14.3"
signature = "1"
thiserror = "1"
tor-error = { path = "../tor-error", version = "0.3.1" }
tor-llcrypto = { path = "../tor-llcrypto", version = "0.3.0" }

[dev-dependencies]
hex-literal = "0.3"

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2.3", features = ["js"] }
