[package]
name = "tor-bytes"
version = "0.23.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2021"
rust-version = "1.77"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Helpers for encoding and decoding byte-orientted data, as used by Tor"
keywords = ["tor", "arti", "encoding"]
categories = ["parsing", "encoding"]
repository = "https://gitlab.torproject.org/tpo/core/arti.git/"

[dependencies]
bytes = "1"
derive-deftly = "0.14"
digest = { version = "0.10.0", features = ["subtle", "mac"] }
educe = "0.4.6"
safelog = { path = "../safelog", version = "0.4.0" }
thiserror = "1"
tor-error = { path = "../tor-error", version = "0.23.0" }
tor-llcrypto = { path = "../tor-llcrypto", version = "0.23.0" }
zeroize = "1"

[dev-dependencies]
hex-literal = "0.4"

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2.3", features = ["js"] }

[features]
full = ["tor-error/full", "tor-llcrypto/full", "safelog/full"]
[package.metadata.docs.rs]
all-features = true
