[package]
name = "tor-bytes"
version = "0.38.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2024"
rust-version = "1.86"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Helpers for encoding and decoding byte-orientted data, as used by Tor"
keywords = ["tor", "arti", "encoding"]
categories = ["parsing", "encoding"]
repository = "https://gitlab.torproject.org/tpo/core/arti.git/"

[dependencies]
bytes = "1"
derive-deftly = { version = "~1.6.0", features = ["full", "beta"] }
digest = { version = "0.10.0", features = ["subtle", "mac"] }
educe = "0.4.22"
safelog = { path = "../safelog", version = "0.7.0" }
thiserror = "2"
tor-error = { path = "../tor-error", version = "0.38.0", default-features = false }
tor-llcrypto = { path = "../tor-llcrypto", version = "0.38.0", optional = true }
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
hex-literal = "1.0"

[features]
default = ["tor-llcrypto"]
full = ["tor-error/full", "tor-llcrypto/full", "safelog/full", "tor-llcrypto?/full"]

[package.metadata.docs.rs]
all-features = true

[target.wasm32-unknown-unknown.dependencies]
getrandom = "0.3.2"
