[package]
name = "tor-cell"
version = "0.23.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2021"
rust-version = "1.77"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Encode and decode Tor cells and messages"
keywords = ["tor", "arti", "protocol"]
categories = ["parser-implementations", "network-programming"]
repository = "https://gitlab.torproject.org/tpo/core/arti.git/"

[features]
default = []

experimental = [
    "experimental-udp",
    "hs",
    "hs-pow-full",
    "hs-pow-v1",
    "testing",
]
# Enable experimental UDP support.
experimental-udp = ["__is_experimental"]

# "hs" = (all) hidden service support, either client or server
hs = ["tor-hscrypto", "__is_experimental"]

# Enable testing only API
testing = ["experimental-udp", "__is_experimental"]

# Onion service proof of work schemes
hs-pow-v1 = ["tor-hscrypto/pow-v1", "__is_experimental"]
hs-pow-full = ["hs-pow-v1", "__is_experimental"]

full = [
    "caret/full",
    "tor-basic-utils/full",
    "tor-bytes/full",
    "tor-cert/full",
    "tor-error/full",
    "tor-hscrypto?/full",
    "tor-linkspec/full",
    "tor-llcrypto/full",
    "tor-units/full", "tor-memquota/full",
]
__is_experimental = []

[dependencies]
amplify = { version = "4", default-features = false, features = ["derive"] }
bitflags = "2"
bytes = "1"
caret = { path = "../caret", version = "0.5.0" }
derive-deftly = "0.14.2"
derive_more = { version = "1.0.0", features = ["full"] }
educe = "0.4.6"
paste = "1"
rand = "0.8"
smallvec = "1.10"
thiserror = "1"
tor-basic-utils = { path = "../tor-basic-utils", version = "0.23.0" }
tor-bytes = { path = "../tor-bytes", version = "0.23.0" }
tor-cert = { path = "../tor-cert", version = "0.23.0" }
tor-error = { path = "../tor-error", version = "0.23.0" }
tor-hscrypto = { path = "../tor-hscrypto", version = "0.23.0", optional = true, features = ["memquota-memcost"] }
tor-linkspec = { path = "../tor-linkspec", version = "0.23.0" }
tor-llcrypto = { path = "../tor-llcrypto", version = "0.23.0", features = ["memquota-memcost"] }
tor-memquota = { version = "0.23.0", path = "../tor-memquota", default-features = false }
tor-units = { path = "../tor-units", version = "0.23.0", features = ["memquota-memcost"] }
void = "1"

[dev-dependencies]
hex = "0.4"
hex-literal = "0.4"
[package.metadata.docs.rs]
all-features = true
