[package]
name = "tor-cert-x509"
version = "0.39.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2024"
rust-version = "1.86"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "X509 certificates as used by Tor"
keywords = ["tor", "arti", "certificate"]
categories = ["parser-implementations"]
repository = "https://gitlab.torproject.org/tpo/core/arti.git/"

[package.metadata.docs.rs]
all-features = true

[features]
default = []

full = ["tor-error/full", "tor-llcrypto/full"]

[dependencies]

digest = "0.10.0"
ecdsa = { version = "0.16.9", features = ["der", "pkcs8", "signing", "verifying"] }
p256 = { version = "0.13.2", features = ["ecdsa"] }
pem = { version = "3" }
rand = { version = "0.9.1" }
rsa = { version = "0.9.2", features = ["sha2"] }
thiserror = "2"
tor-error = { path = "../tor-error", version = "0.39.0" }
tor-llcrypto = { path = "../tor-llcrypto", version = "0.39.0", features = ["rng-compat"] }
x509-cert = { version = "0.2.5", features = ["builder", "hazmat"] }

[dev-dependencies]
tor-basic-utils = { path = "../tor-basic-utils", version = "0.39.0" }
